# andrena-ai-blog

./: .gitignore  README.md  aufgabenstellung.md
aufgabenstellung/: Aufgabe-1-claude-code.md  Aufgabe-2-git-worktrees.md  Aufgabe-3-usage-analyse.md
backend/: db.sqlite3  manage.py  pyproject.toml
backend/contract_tests/: test_api_contracts.py
backend/src/articles/management/commands/: cleanup_api_contract_data.py
backend/src/articles/migrations/: 0002_alter_article_slug_alter_article_tag_list_and_more.py  0003_seed_workshop_content.py
backend/src/articles/tests/: test_articles.py
backend/src/config/: settings.py
backend/src/users/: views.py
backend/src/users/tests/: test_user.py
frontend/: angular.json  package-lock.json  package.json  playwright.api.config.ts  proxy.conf.json
frontend/src/: index.html  styles.scss
frontend/src/app/layout/footer/: footer.component.html
frontend/src/app/layout/header/: header.component.html  header.component.scss
frontend/src/app/pages/home/: home.component.html  home.component.scss
frontend/src/app/pages/login/: login.component.scss
frontend/src/app/shared/error-message/: error-message.component.html  error-message.component.ts
frontend/tests/api/: articles.spec.ts  comments-tags.spec.ts  helpers.ts  profiles.spec.ts  users-auth.spec.ts
scripts/: cleanup_api_contract_data.sh  run_api_contract_tests.sh
